# Loudspeaker.py

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Loudspeaker.jl  README.md  pixi.toml  pyproject.toml  pyrightconfig.json  setup_project.py  todo.md
.benchmarks/Linux-CPython-3.13-64bit/: 0001_profiled.json
.junie/: guidelines.md
examples/: basic_diffrax+ode_diffrax_example.md  cde_diffrax_msd_example.ipynb  stiff_ode_diffrax_example.ipynb
examples/docs_examples/: cde_diffrax_example.ipynb  cde_diffrax_example.py  neural_ode_diffrax_example.ipynb  neural_ode_diffrax_example.py  ode_with_forcing_diffrax_example.ipynb  ode_with_forcing_diffrax_example.py  stiff_ode_diffrax_example.py
logs/: benchmark_optuna_best.json  benchmark_profile.json
repos/: Loudspeaker.jl  loudspeaker-datasets
scripts/: __init__.py  pytorch_cfe_example.py  run_all_experiments.py  setup_jupyter_kernel.py
scripts/1_blackbox_fitting/: exp_1_2_2_1_nonlinear_msd_fit_using_nonlinear_nn.py
scripts/3_blackbox_sysid/: exp_3_2_2_1_nonlinear_msd_sysid_using_ensemble_nn.py
scripts/4_graybox_sysid/: exp_4_1_1_1_linear_msd_fit_using_graybox_linear_nn.py  exp_4_1_1_2_linear_loudspeaker_fit_using_graybox_linear_nn.py
scripts/benchmarks/: optimize_tolerances.py
scripts/exp1_getting_cde_to_work_on_anything/: neural_cde_example.py
scripts/exp2_mass_spring_damper/: README.md  demo_script.py  msd_simulation_with_forcing.py  neural_ode_example_README.md  neural_ode_funcs.py  neural_ode_test.py  test_neural_cde_integration.py  test_neural_ode_funcs.py  test_neural_ode_integration.py
scripts/exp3_MSD_NN/: exp3_msd_sim_node_training.py  exp3_sim.py
scripts/exp4_loudspeaker_sim/: exp4_loudspeaker_training.py  exp4_sim.py
scripts/exp5_linear_model/: exp5_linear_training.py
scripts/exp6_nonlinear_msd/: exp6_ensemble_training.py
scripts/exp7_nonlinear_msd_single/: exp7_single_nn_training.py
scripts/experiments/: _paths.py
scripts/experiments/0_data_sources/: exp_0_1_1_linear_msd_mass_spring_damper.py  exp_0_1_2_linear_loudspeaker.py  exp_0_2_1_nonlinear_msd.py  exp_0_2_1_nonlinear_msd_wip.py  exp_0_2_2_nonlinear_loudspeaker.py  exp_0_2_2_nonlinear_loudspeaker_wip.py  exp_0_3_1_loudspeaker_data_from_linear_loudspeaker1_blackbox_fitting.py  exp_0_3_1_loudspeaker_data_from_linear_loudspeaker1_blackbox_fitting_wip.py
scripts/experiments/1_blackbox_fitting/: exp_1_1_1_1_linear_msd_fit_using_linear_nn.py  exp_1_1_1_2_linear_loudspeaker_fit_using_linear_nn.py  exp_1_1_2_2_nonlinear_loudspeaker_fit_using_linear_nn.py  exp_1_2_2_1_nonlinear_msd_fit_using_nonlinear_nn.py  exp_1_2_2_2_nonlinear_loudspeaker_fit_using_nonlinear_nn.py  exp_1_3_2_1_nonlinear_msd_fit_using_nonlinear_nn_with_noise.py
scripts/experiments/2_graybox_fit/: exp_2_1_1_1_linear_msd_fit_using_graybox_nonlinear_nn_wip.py  exp_2_1_1_2_linear_loudspeaker_fit_using_graybox_nonlinear_nn_wip.py  exp_2_1_2_1_nonlinear_msd_fit_using_graybox_nonlinear_nn_wip.py  exp_2_1_2_2_nonlinear_loudspeaker_fit_using_graybox_nonlinear_nn.py  exp_2_2_1_2_linear_loudspeaker_fit_using_graybox_nonlinear_nn.py  exp_2_2_2_1_nonlinear_msd_fit_using_graybox_nonlinear_nn.py
scripts/experiments/3_blackbox_sysid/: exp_3_1_1_1_linear_msd_fit_using_linear_nn.py  exp_3_1_1_2_linear_loudspeaker_fit_using_linear_nn.py  exp_3_1_2_1_nonlinear_msd_fit_using_linear_nn.py  exp_3_1_2_2_nonlinear_loudspeaker_using_linear_nn.py  exp_3_2_1_1_linear_msd_sysid_using_ensemble_nn.py  exp_3_2_1_2_linear_loudspeaker_sysid_using_ensemble_nn.py  exp_3_2_2_1_nonlinear_msd_sysid_using_ensemble_nn.py  exp_3_2_2_2_nonlinear_loudspeaker_sysid_using_ensemble_nn.py
scripts/experiments/4_graybox_sysid/: exp_4_1_1_1_linear_msd_fit_using_graybox_linear_nn.py  exp_4_1_1_2_linear_loudspeaker_fit_using_graybox_linear_nn.py
scripts/legacy/exp1_getting_cde_to_work_on_anything/: neural_cde_example.py
scripts/legacy/exp2_mass_spring_damper/: README.md  demo_script.py  exp2_neural_ode.py  exp3_neural_ode.py  exp4_neural_ode.py  msd_simulation_with_forcing.py  neural_cde_msd_example.py  neural_ode_example.py  neural_ode_example_README.md  neural_ode_funcs.py  neural_ode_funcs_README.md  neural_ode_test.py  test_minimal_integration.py  test_neural_cde_integration.py  test_neural_cde_mse.py  test_neural_ode_experiments.py  test_neural_ode_funcs.py  test_neural_ode_integration.py  test_visualization_config.py
scripts/utils/: setup_jupyter_kernel.py
src/: __init__.py
src/loudspeaker/: __init__.py  _integrator.py  data.py  io.py  loudspeaker_sim.py  metrics.py  msd_sim.py  neuralode.py  nonlinear_msd.py  plot_labels.py  plotting.py  testsignals.py
src/loudspeaker/models/: __init__.py  linear.py  simulation.py
src/loudspeaker_py/: __init__.py  cli.py
src/loudspeaker_py/data/: __init__.py
src/loudspeaker_py/models/: __init__.py
src/loudspeaker_py/solvers/: __init__.py
src/loudspeaker_py/utils/: __init__.py
src/loudspeaker_py/visualization/: __init__.py
src/models/: __init__.py  loudspeaker.py
tests/: __init__.py
tests/benchmarks/: test_performance.py
tests/test_loudspeaker/: test_data.py  test_io.py  test_loudspeaker_sim.py  test_metrics.py  test_msd_sim.py  test_neuralode.py  test_nonlinear_msd.py  test_plot_labels.py  test_plotting.py  test_testsignals.py
tests/test_models/: __init__.py  test_loudspeaker_integration.py  test_neural_cde.py
tests/test_solvers/: __init__.py
tests/test_utils/: test_package_metadata.py  test_simulation_utils.py
