[project]
authors = [{name = "Johannes Nørskov Toke", email = "johannestoke@gmail.com"}]
dependencies = ["colorednoise>=2.2.0,<3", "chex", "hypothesis", "pytest-benchmark"]
name = "loudspeaker"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/loudspeaker"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
# Scientific computing and ML
numpy = ">=2.3.5,<3"
scipy = ">=1.16.3,<2"
pandas = ">=2.3.3,<3"

# JAX ecosystem for diffrax
jax = ">=0.7.2,<0.8"
jaxlib = ">=0.7.2,<0.8"
# Note: jaxlib might need to be installed via pip separately for GPU support
jaxtyping = ">=0.3.2,<0.4"

# Differential equation solvers
diffrax = ">=0.7.0,<0.8"
equinox = ">=0.13.2,<0.14"

# Optimization
optax = ">=0.2.6,<0.3"

# Testing
hypothesis = ">=6.148.1,<7"
chex = ">=0.1.91,<0.2"
pytest-benchmark = ">=5.2.3,<6"

# Visualization and plotting
matplotlib = ">=3.10.8,<4"
seaborn = ">=0.13.2,<0.14"
plotly = ">=6.5.0,<7"

# Experiment tracking
tensorboard = ">=2.20.0,<3"

# Jupyter ecosystem
jupyter = ">=1.1.1,<2"
ipykernel = ">=7.1.0,<8"


# Development tools
mypy = ">=1.18.2,<2"
pyright = ">=1.1.407,<2"
pytest = ">=9.0.1,<10"
pytest-cov = ">=7.0.0,<8"
pre-commit = ">=4.4.0,<5"
ruff = ">=0.14.5,<0.15"
bandit = ">=1.9.1,<2"
radon = ">=6.0.1,<7"
vulture = ">=2.14,<3"

# Additional utilities
tqdm = ">=4.67.1,<5"
rich = ">=14.2.0,<15"
click = ">=8.3.1,<9"
hydra-core = ">=1.3.2,<2"
omegaconf = ">=2.3.0,<3"

# Data handling
h5py = ">=3.15.1,<4"
pytorch = ">=2.8.0,<3"
optuna = ">=4.6.0,<5"
orbax-checkpoint = ">=0.8.0,<0.9"
jax-tqdm = ">=0.4.0,<0.5"
optimistix = ">=0.0.11,<0.0.12"
tokei = ">=12.1.2,<13"

[tool.ruff]
target-version = "py311"
extend-exclude = [
    ".benchmarks",
    "logs",
    "examples/docs_examples",
    "scripts/legacy",
]

[tool.ruff.lint.per-file-ignores]
"scripts/experiments/**/*.py" = ["E402"]

[tool.pixi.pypi-dependencies]
loudspeaker = { path = ".", editable = true }


[tool.pixi.tasks]
# Install Jupyter kernel for this environment
init-kernel = "python -m ipykernel install --user --name=loudspeaker-py --display-name='Loudspeaker Python (CFES)'"

# Development setup
dev-setup = "pre-commit install && python -m pip install -e ."

# Core test targets
test = "pytest tests/test_loudspeaker"
test-all = "pytest tests/test_loudspeaker tests/benchmarks"
test-cov = "pytest --cov=src --cov-report=term-missing --cov-report=html tests/test_loudspeaker"
bench = "pytest tests/benchmarks --benchmark-only"
bench-profiler = "python scripts/benchmarks/optimize_tolerances.py --trials=25"
benchmark = "pytest tests/benchmarks/test_performance.py --benchmark-only"
run-experiments = "python scripts/run_all_experiments.py"

# Format code
format = "ruff format src tests scripts && ruff check --select I --fix src tests scripts"

# Type checking
type-check = "mypy src"
type-check-pyright = "pyright"

# Lint code
lint = "ruff check src tests scripts"

# Security and quality analyses
security = "bandit -r src tests scripts"
complexity = "radon cc src tests scripts --total-average"
maintainability = "radon mi src tests scripts"
dead-code = "vulture src tests scripts"

# Clean build artifacts
clean = "rm -rf build/ dist/ *.egg-info/ .pytest_cache/ htmlcov/ .coverage"

# Build package
build = "python -m build"

# Install in development mode
install-dev = "python -m pip install -e ."

# Uninstall package
uninstall = "python -m pip uninstall -y loudspeaker"

# TensorBoard utility
tensorboard = "tensorboard --logdir=out/tensorboard"

#lines of code loc
tokei_all = "tokei src tests scripts"
tokei_src = "tokei src"

[tool.pytest.ini_options]
testpaths = ["tests/test_loudspeaker"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
